--- a/CSS/main.css
+++ b/CSS/main.css
@@ -190,8 +190,7 @@ a.menu__link {
   justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center;
-  margin-left: 70px; }
+  align-items: center; }
 
 .content__photo {
   width: 451px;
