--- a/SCSS/config/_variables.scss
+++ b/SCSS/config/_variables.scss
@@ -4,3 +4,9 @@ $green: #8ac03e;
 $dark: #2f3234;
 $darken: #1f2122;
 $white: #ffffff;
+$grey: #5a5a5a;
+
+
+$meat: #e25028;
+$hand: #f8b43a;
+$natural: #8ac03e;
