--- a/SCSS/layout/_base.scss
+++ b/SCSS/layout/_base.scss
@@ -1,8 +1,21 @@
+
+html {
+ @include tablet {
+     font-size: 14px;
+ }
+
+ @include phone {
+     font-size: 13px;
+ }
+}
+
+
 body{
     font-family: 'Ubuntu', Arial, sans-serif;  
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: #000000;
+  font-size: rem(14px);
 
 }
 
