--- a/SCSS/section/first.scss
+++ b/SCSS/section/first.scss
@@ -11,8 +11,9 @@
      display: -webkit-flex; 
      display: flex;
      justify-content: space-between;
-     height: 100%;
+     align-items: center;
      
+    
  
  }
  .header{
@@ -20,12 +21,20 @@
      display: flex;
      justify-content: space-between;
      align-items: center;
-     margin: 8px 80px 0px 77px;
+     margin: rem(8px) rem(80px) rem(0px) rem(77px);
+     width: 100%;
+     
+     
      
  }
+
  
  ul.menu__list{
      margin-left: auto;
+
+     @include tablet{
+         display: none;
+     }
      
  }
  
@@ -33,7 +42,7 @@
  
  ul.menu__list li{
      display: inline-block;
-     margin: 0px 15px 0px -6px;
+     margin: rem(0px) rem(15px) rem(0px) rem(-6px);
 
 
 
@@ -41,8 +50,8 @@
        display: inline-block;
        vertical-align: middle;
         content: ' ';
-        @include circle(5px, #ffffff);
-        margin-left: 16px;
+        @include circle(rem(5px), #ffffff);
+        margin-left: rem(16px);
    
        
     
@@ -56,28 +65,38 @@
     
  
  }
+
+ .header__logo{
+
+    @include tablet{
+        flex-grow: 2;
+        text-align: left;
+    }
+ }
  
 
  
  .menu__item-link{
      color: $white;
      font-weight: 400;
-     font-size: 13px;
+     font-size: rem(13px);
      text-transform: uppercase;
  
         
     }
+
+    
  
     a.menu__link{
         display: block;
         color: $white;
         font-weight: 400;
-        font-size: 13px;
+        font-size: rem(13px);
         text-transform: uppercase;
-        border-radius: 5px;
+        border-radius: rem(5px);
         background-color: $orange;
-        padding: 10px 16px 10px 16px;
-        border: 0px;
+        padding: rem(10px) rem(16px) rem(10px) rem(16px);
+        border: rem(0px);
          
             &:hover{
                 background-color: #c1401e;
@@ -90,50 +109,150 @@
  
  
  .content{
-     display: -webkit-flex; 
-     -webkit-justify-content: flex-start;
+     
      display: flex;
      justify-content: center;
      align-items: center;
+
+     @include tablet{
+         flex-direction: column;
+         text-align: center;
+     }
      
  }
  
- .content__photo{
-     width: 451px;
-     height: 424px;
+  .content__photo{
+      display: block;
+    max-width: 100%;
+    max-height: 100%; 
+
+    @include phone{
+        max-height: 90%;
+        max-width: 80%;
+    }
      
  }
  
  
  img.content__img{
-     display: none;
+    max-height: 100%;
+   
+    max-width: 100%;
+    display: block;
+    margin: auto;
  }
  
  .content__text{
      max-width: 50%;
-     margin-left: 12px;
+     margin-left: rem(12px);
+
+     @include tablet{
+        display: flex;
+        flex-direction: column;
+         text-align: center;
+         margin-left: 0;
+         max-width: 100%;
+     }
  }
  
  
- h1.content__text-title{
+ h2.content__text-title{
      color:  $yellow;
      text-align: left;
-     margin: 61px 0px 0px 0px;   
+     margin: rem(61px) rem(0px) rem(0px) rem(0px);   
+
+     @include tablet{
+        flex-wrap: nowrap;
+        text-align: center;
+        margin-top: rem(27px);
+        font-size: 50px;
+     }
+
+     @include phone{
+        font-size: 63px;
+     }
  }
  
  .content__text-text{
      font-family: 'lifehackmedium';
-     font-size: 65px;
-     margin: 22px 0px 0px 3px;
+     font-size: rem(65px);
+     margin: rem(22px) rem(0px) rem(0px) rem(3px);
      text-align: left;
-     line-height: 59px;
-     letter-spacing: -2px;
+     line-height: rem(59px);
+     letter-spacing: rem(-2px);
+
+     @include tablet{
+       
+        text-align: center;
+     }
+
      
  }
  
  .scroll{
-     padding-bottom: 50px;
+     display: inline-block;
+    padding-bottom: rem(50px);
+    width: rem(30px);
+    height: rem(30px);
+
+    @include phone{
+        height: 2.14286rem;
+    }
     
  }
+
+ a.scroll__link{
+    width: 100%;
+    height: 100%;
+
+ }
+
+ 
+
+
+ .scroll__icon{
+    fill: $white;
+    width: 100%;
+    height: 100%;
+}
+
+
+.burger{
+    width: rem(27px);
+    height: rem(27px);
+    display: none;
+    margin-left: rem(30px);
+    margin-right: rem(15px);
+
+    @include tablet{
+        display: block;
+
+        
+    }
+}
+
+.burger-link{
+    display: block;
+    content: '';
+    @include line(25px, 5px, $white);
+    margin: rem(11px) rem(0px) rem(4px) rem(0px);
+    position: absolute;
+
+    &:before{
+        content: '';
+        @include line(25px, 5px, $white);
+        margin: rem(9px) rem(0px) rem(5px) rem(-12px);
+        position: absolute;
+    }
+
+   
+
+    &:after{
+        content: '';
+        @include line(25px, 5px, $white);
+        margin: rem(-10px) rem(0px) rem(0px) rem(-12px);
+        position: absolute;
+    }
+}
 
 
