--- a/SCSS/section/menu.scss
+++ b/SCSS/section/menu.scss
@@ -1,4 +1,136 @@
-.menu-section{
+.menu{
     background: url('../images/bg/bg_menu_page.jpg') 0 0 no-repeat; 
     background-size: cover;
+    color: $white;
+   
+
   }
+
+
+  .menu__container{
+    text-align: left;
+    font-size: 0;
+    position: relative;
+    display: flex;
+    max-width: 100%;
+  }
+
+  h2.menu__title{
+    margin-top: rem(97px);
+    margin-left: rem(98px);
+  }
+
+h2.menu__title, ul.menu__accordeon{
+  display: inline-block;
+}
+
+ul.menu__accordeon{
+  text-align: center;
+  height: 100%;
+  font-size: 0;
+  position: absolute;
+  right: 0;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  top: 0;
+  bottom: 0;
+
+}
+
+ul.menu__accordeon li{
+  
+
+  &:nth-child(1){
+    background: url('../images/menu/bg_meat.jpg') 0 0 no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+
+  &:nth-child(2){
+    background: url('../images/menu/bg_vegan.jpg') 0 0 no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+
+  &:nth-child(3){
+    background: url('../images/menu/bg_diet.jpg') 0 0 no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+}
+
+li.menu__accordeon-item{
+  height: 100%;
+  display: flex;
+  
+
+  
+}
+
+/*.menu__accordeon-title, .menu__accordeon-text{
+  display: inline-block;
+  vertical-align: top;
+}*/
+
+
+
+.menu__accordeon-title{
+  
+  background: rgba(0,0,0,0.5);
+  font-family: 'gagalinregular';
+  font-size: rem(40px);
+  position: relative;
+  width: rem(80px);
+ 
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  
+
+  
+  
+
+  a.title__text{
+    color: $white;
+    text-decoration: none;
+    //display: inline-block;//
+    writing-mode: tb-rl;
+    width: auto;
+    margin-top: rem(2px);
+    height: 100%;
+   /* position: absolute;
+    bottom: -24%;
+    right: 23%; */
+    transform: scale(-1, -1);
+    
+    
+  }
+
+  
+}
+
+
+
+.menu__accordeon-text{
+  background: rgba(0,0,0,0.8);
+  text-align: left;
+  height: 100%;
+  font-weight: 300;
+  font-size: rem(14px);
+  
+  width: 0;
+  overflow: hidden;
+  
+
+}
+
+.text-active{
+  width: rem(540px);
+  padding: rem(61px) rem(35px) rem(0px) rem(35px);
+  box-sizing: border-box;
+
+   @include tablet{
+      width: 100%;
+   }
+}
